--- a/Deep_Meter_Multi_syllables_interpret.ipynb
+++ b/Deep_Meter_Multi_syllables_interpret.ipynb
@@ -64,10 +64,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "lVjNK8shFKOC",
-        "outputId": "c7b9870f-69f2-4c13-aea7-f8c5bf260792",
+        "outputId": "4c7ec6e2-9e55-41d3-d04f-50a026446932",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 332
         }
       },
       "cell_type": "code",
@@ -85,23 +85,28 @@
         "!gunzip -qf blobs/*.gz || true\n",
         "!gunzip -qf prepped_data/*.gz || true"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: pygtrie in /usr/local/lib/python3.6/dist-packages (2.3)\n",
+            "Collecting pygtrie\n",
+            "  Downloading https://files.pythonhosted.org/packages/9d/42/f70a09ce102fa2fc1c54df26f71ecbf0a38e78c1da0b1b58bcf539cf2e94/pygtrie-2.3.tar.gz\n",
+            "Building wheels for collected packages: pygtrie\n",
+            "  Running setup.py bdist_wheel for pygtrie ... \u001b[?25l-\b \bdone\n",
+            "\u001b[?25h  Stored in directory: /root/.cache/pip/wheels/3c/d0/b1/c8f2bbb9dc1fd0e25acde4d81972055b426430630f99395b8d\n",
+            "Successfully built pygtrie\n",
+            "Installing collected packages: pygtrie\n",
+            "Successfully installed pygtrie-2.3\n",
             "Cloning into 'deep_meter'...\n",
-            "remote: Enumerating objects: 122, done.\u001b[K\n",
-            "remote: Counting objects: 100% (122/122), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (89/89), done.\u001b[K\n",
-            "remote: Total 365 (delta 64), reused 88 (delta 33), pack-reused 243\u001b[K\n",
-            "Receiving objects: 100% (365/365), 24.34 MiB | 19.81 MiB/s, done.\n",
-            "Resolving deltas: 100% (195/195), done.\n",
+            "remote: Enumerating objects: 127, done.\u001b[K\n",
+            "remote: Counting objects: 100% (127/127), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (93/93), done.\u001b[K\n",
+            "remote: Total 370 (delta 67), reused 91 (delta 34), pack-reused 243\u001b[K\n",
+            "Receiving objects: 100% (370/370), 24.37 MiB | 19.72 MiB/s, done.\n",
+            "Resolving deltas: 100% (198/198), done.\n",
             "/content/deep_meter\n",
-            "Already up to date.\n",
-            "gzip: blobs/*.gz: No such file or directory\n",
-            "gzip: prepped_data/*.gz: No such file or directory\n"
+            "Already up to date.\n"
           ],
           "name": "stdout"
         }
@@ -111,33 +116,32 @@
       "metadata": {
         "colab_type": "code",
         "id": "MSeY-MUQo2Ha",
-        "colab": {}
+        "outputId": "101b6734-5172-49b4-cc7b-86f3dac2caa2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
-        "# boilerplate from base notebook\n",
-        "import tensorflow as tf\n",
-        "import tensorflow_hub as hub\n",
-        "import matplotlib.pyplot as plt\n",
+        "\n",
         "import numpy as np\n",
-        "import os\n",
-        "import pandas as pd\n",
-        "import re\n",
-        "import seaborn as sns\n",
-        "import keras.layers as layers\n",
-        "from keras.models import Model\n",
-        "from keras import backend as K\n",
-        "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
-        "from tensorflow.keras.optimizers import Nadam, Adam\n",
-        "import gc\n",
         "from google.colab import files\n",
         "from google.colab import drive\n",
         "\n",
         "import pickle\n",
         "np.random.seed(10)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "metadata": {
@@ -170,15 +174,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 124
         },
-        "outputId": "04cfeb13-598e-4eaf-e906-0faa6e156c31"
+        "outputId": "dd039c80-a707-441e-b1ab-676b2a9d8ada"
       },
       "cell_type": "code",
       "source": [
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,10 +266,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "eN9aqig-QpDZ",
-        "outputId": "ea6e96b9-e7cf-4820-eee7-c6c627c03f04",
+        "outputId": "5ac17ad6-8792-4afb-822d-59ea9952c2b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 86
         }
       },
       "cell_type": "code",
@@ -285,7 +289,7 @@
         "print(train_label.shape)\n",
         "print(test_label.shape)"
       ],
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +328,7 @@
       "metadata": {
         "id": "t3m7j_t1y8Wv",
         "colab_type": "code",
-        "outputId": "672bb353-3c08-491d-f1f6-414869e4e3f4",
+        "outputId": "dff5764b-08e2-4769-e612-b8d3a8303713",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -338,7 +342,7 @@
         "    predicts = pickle.load(f)\n",
         "print(\"Number of predictions: \" + str(len(predicts[0])))"
       ],
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,14 +357,15 @@
       "metadata": {
         "colab_type": "code",
         "id": "xaR0d5VPU23Z",
-        "outputId": "87394609-5eb1-4cdb-e09f-aa2a2b8205d8",
+        "outputId": "4fb53f86-aad1-4b3b-e8cd-adcb362cf263",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 104
         }
       },
       "cell_type": "code",
       "source": [
+        "max_variants = 5\n",
         "num_tests = len(predicts[0])\n",
         "num_tests = min(5, len(predicts[0]))\n",
         "# Collect possible syllables from each output model\n",
@@ -375,18 +380,36 @@
         "for i in range(num_symbols):\n",
         "  for j in range(num_tests):\n",
         "    for k in range(num_syllables):\n",
-        "      if predicts[i][j][k] > 0.1:\n",
+        "      if predicts[i][j][k] > 0.05:\n",
         "        #print(\"i, j {0},{1}, -> {2}\".format(i,j,k))\n",
         "        index_arrays[j][i].append(k)\n",
-        "\n",
-        "print(index_arrays[0])"
+        "        \n",
+        "# sort order of possible syllables at each slot by score\n",
+        "for j in range(num_tests):\n",
+        "  indexes = index_arrays[j]\n",
+        "  for i in range(num_symbols):\n",
+        "    score_set = [1.0] * len(indexes[i])\n",
+        "    for k in range(len(indexes[i])):\n",
+        "      score_set[k] = predicts[i][j][k]\n",
+        "    new_indexes = []\n",
+        "    sorted_i = list(np.argsort(score_set))\n",
+        "    sorted_i.reverse()\n",
+        "    for x in sorted_i:\n",
+        "      new_indexes.append(indexes[i][x])\n",
+        "    index_arrays[j][i] = new_indexes[0:max_variants]\n",
+        "for j in range(min(num_tests,30)):\n",
+        "  print(index_arrays[j])"
       ],
-      "execution_count": 17,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[5, 6, 11], [222, 1112], [3], [3, 826], [2, 3], [], [2, 3], [364], [2, 9], [222]]\n"
+            "[[11, 6, 9, 7, 2], [], [5, 3, 2], [3], [9, 2, 3], [3], [9, 3, 2], [54, 3], [9, 5, 3, 2], [563, 633, 269, 222]]\n",
+            "[[6, 2, 3], [175, 208], [10, 22, 8, 2], [79, 95], [29, 2, 3], [208, 79], [10, 19, 3, 2], [208], [6, 13, 223, 19, 3], [79, 73, 3237]]\n",
+            "[[5], [43], [5, 3, 2], [], [2, 3], [3], [4, 3, 2], [5, 3], [5, 3, 2], [545]]\n",
+            "[[27, 2, 6], [27], [51, 31, 25], [], [4, 53, 2, 3], [], [31, 51, 4, 2], [], [13, 25, 21, 4, 2], [99]]\n",
+            "[[51, 2, 3], [6], [4, 3, 2], [], [2, 3], [], [3, 2], [], [6, 13, 4, 2], [173]]\n"
           ],
           "name": "stdout"
         }
@@ -398,18 +421,16 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 69
         },
-        "outputId": "04e30e1f-22f0-4eb1-82b4-164983aef45a"
+        "outputId": "7fcf94f7-1a33-4b97-9f37-cacfc739a44b"
       },
       "cell_type": "code",
       "source": [
+        "\n",
         "decoder = decodesyllables.Decoder(cmudict.CMUDict())\n",
         "for j in range(0,num_tests):\n",
-        "  alist = []\n",
-        "  slist = []\n",
-        "#\"        arpabet_arrays[j][i].append(arpabets_mgr.get_arpabet(k))\\n\",\n",
-        "#\"        score_arrays[j][i].append(predicts[i][j][k])\\n\",\n",
+        "  print(\"Predicting sentence: \" + test_text[j])\n",
         "  score_array = []\n",
         "  for index_list in product(*index_arrays[j]):\n",
         "    index_list = list(index_list)\n",
@@ -421,12 +442,8 @@
         "        \n",
         "  # product() generates empty list if any slot is empty\n",
         "  if len(score_array) == 0:\n",
+        "    print(\"  no interpretations found\")\n",
         "    continue\n",
-        "  stotals = [1.0] * len(score_array)\n",
-        "  for i in range(len(slist)):\n",
-        "    stotals[j] = decodewords.sum_scores(alist[i], slist[i])\n",
-        "  topindexes = np.argsort(stotals)[0:20]\n",
-        "  print(\"Top score = {0}\".format(stotals[topindexes[0]]))\n",
         "\n",
         "  syll_array = []\n",
         "  for index_list in product(*index_arrays[j]):\n",
@@ -445,16 +462,16 @@
         "    count += 1\n",
         "    print(s)\n",
         "  if count == 0:\n",
-        "    print(\"None found\")"
+        "    print(\"Sentences found: \".format(count))"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Top score = 1.0\n",
-            "['AE N D', 'W AH T', 'IH Z', 'M AE N', 'B IH', 'W AH T', 'AE N D', 'W AH T', 'AE N D', 'B IY']\n",
-            "and what is(2) mahn bui what and what and b\n"
+            "Predicting sentence: To life, the creamy onyx and the skins\n",
+            "  no interpretations found\n",
+            "Predicting sentence: And what is Man the while? And what his will?\n"
           ],
           "name": "stdout"
         }
@@ -464,7 +481,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "yyDGVtigW57f",
-        "colab": {}
+        "outputId": "9dfd2224-ec00-4c32-ca8f-03c0bc701bf2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 234
+        }
       },
       "cell_type": "code",
       "source": [
@@ -474,8 +495,20 @@
         "predict_labels = [categories[logit] for logit in predict_logits]\n",
         "predict_labels"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-7f6e6bf5580f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcategories\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpredict_logits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredicts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Categorie: {0}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpredict_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlogit\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mlogit\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpredict_logits\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpredict_labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df_train' is not defined"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
